[tool.poetry]
name = "pygraph"
version = "0.1.0"
description = ""
authors = ["Richard Apodaca <rapodaca@metamolecular.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
